[build-system]
requires = [
  "setuptools >= 40.9.0",
  "setuptools_scm",
  "setuptools_scm_git_archive",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.darker]
src = [
    "hopic",
]

[tool.black]
include = "hopic"
line-length = 160
target-version = ["py36", "py39"]

[tool.isort]
force_grid_wrap = 2
line_length = 160
profile = "black"
src_paths = [
    "hopic",
]
